Move Bugzilla to the new API
